QtBeef/src/Qt/qwidget.bf

	[LinkName("QWidget_SizePolicy")]
	public static extern QSizePolicy_Ptr QWidget_SizePolicy(QWidget_Ptr* self);
	[LinkName("QWidget_SetSizePolicy")]
	public static extern void QWidget_SetSizePolicy(QWidget_Ptr* self, QSizePolicy_Ptr sizePolicy);
	[LinkName("QWidget_SetSizePolicy2")]
	public static extern void QWidget_SetSizePolicy2(QWidget_Ptr* self, QSizePolicy_Policy horizontal, QSizePolicy_Policy vertical);
	[LinkName("QWidget_HeightForWidth")]
	public static extern c_int QWidget_HeightForWidth(QWidget_Ptr* self, c_int param1);
	[LinkName("QWidget_HasHeightForWidth")]
	public static extern bool QWidget_HasHeightForWidth(QWidget_Ptr* self);
	[LinkName("QWidget_VisibleRegion")]
	public static extern QRegion_Ptr QWidget_VisibleRegion(QWidget_Ptr* self);
	[LinkName("QWidget_SetContentsMargins")]
	public static extern void QWidget_SetContentsMargins(QWidget_Ptr* self, c_int left, c_int top, c_int right, c_int bottom);
	[LinkName("QWidget_SetContentsMargins2")]
	public static extern void QWidget_SetContentsMargins2(QWidget_Ptr* self, QMargins_Ptr* margins);
	[LinkName("QWidget_ContentsMargins")]
	public static extern QMargins_Ptr QWidget_ContentsMargins(QWidget_Ptr* self);
	[LinkName("QWidget_ContentsRect")]
	public static extern QRect_Ptr QWidget_ContentsRect(QWidget_Ptr* self);
	[LinkName("QWidget_Layout")]
	public static extern QLayout_Ptr* QWidget_Layout(QWidget_Ptr* self);
	[LinkName("QWidget_SetLayout")]
	public static extern void QWidget_SetLayout(QWidget_Ptr* self, QLayout_Ptr* layout);
	[LinkName("QWidget_UpdateGeometry")]
	public static extern void QWidget_UpdateGeometry(QWidget_Ptr* self);
	[LinkName("QWidget_SetParent")]
	public static extern void QWidget_SetParent(QWidget_Ptr* self, QWidget_Ptr* parent);
	[LinkName("QWidget_SetParent2")]
	public static extern void QWidget_SetParent2(QWidget_Ptr* self, QWidget_Ptr* parent, void* f);
	[LinkName("QWidget_Scroll")]
	public static extern void QWidget_Scroll(QWidget_Ptr* self, c_int dx, c_int dy);
	[LinkName("QWidget_Scroll2")]
	public static extern void QWidget_Scroll2(QWidget_Ptr* self, c_int dx, c_int dy, QRect_Ptr* param3);
	[LinkName("QWidget_FocusWidget")]
	public static extern QWidget_Ptr* QWidget_FocusWidget(QWidget_Ptr* self);
	[LinkName("QWidget_NextInFocusChain")]
	public static extern QWidget_Ptr* QWidget_NextInFocusChain(QWidget_Ptr* self);
	[LinkName("QWidget_PreviousInFocusChain")]
	public static extern QWidget_Ptr* QWidget_PreviousInFocusChain(QWidget_Ptr* self);
	[LinkName("QWidget_AcceptDrops")]
	public static extern bool QWidget_AcceptDrops(QWidget_Ptr* self);
	[LinkName("QWidget_SetAcceptDrops")]
	public static extern void QWidget_SetAcceptDrops(QWidget_Ptr* self, bool on);
	[LinkName("QWidget_AddAction")]
	public static extern void QWidget_AddAction(QWidget_Ptr* self, QAction_Ptr* action);
	[LinkName("QWidget_AddActions")]
	public static extern void QWidget_AddActions(QWidget_Ptr* self, void** actions);
	[LinkName("QWidget_InsertActions")]
	public static extern void QWidget_InsertActions(QWidget_Ptr* self, QAction_Ptr* before, void** actions);
	[LinkName("QWidget_InsertAction")]
	public static extern void QWidget_InsertAction(QWidget_Ptr* self, QAction_Ptr* before, QAction_Ptr* action);
	[LinkName("QWidget_RemoveAction")]
	public static extern void QWidget_RemoveAction(QWidget_Ptr* self, QAction_Ptr* action);
	[LinkName("QWidget_Actions")]
	public static extern void* QWidget_Actions(QWidget_Ptr* self);
	[LinkName("QWidget_AddAction2")]
	public static extern QAction_Ptr* QWidget_AddAction2(QWidget_Ptr* self, libqt_string* text);
	[LinkName("QWidget_AddAction3")]
	public static extern QAction_Ptr* QWidget_AddAction3(QWidget_Ptr* self, QIcon_Ptr* icon, libqt_string* text);
	[LinkName("QWidget_AddAction4")]
	public static extern QAction_Ptr* QWidget_AddAction4(QWidget_Ptr* self, libqt_string* text, QKeySequence_Ptr* shortcut);
	[LinkName("QWidget_AddAction5")]
	public static extern QAction_Ptr* QWidget_AddAction5(QWidget_Ptr* self, QIcon_Ptr* icon, libqt_string* text, QKeySequence_Ptr* shortcut);
	[LinkName("QWidget_ParentWidget")]
	public static extern QWidget_Ptr* QWidget_ParentWidget(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowFlags")]
	public static extern void QWidget_SetWindowFlags(QWidget_Ptr* self, void* type);
	[LinkName("QWidget_WindowFlags")]
	public static extern void* QWidget_WindowFlags(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowFlag")]
	public static extern void QWidget_SetWindowFlag(QWidget_Ptr* self, Qt_WindowType param1);
	[LinkName("QWidget_OverrideWindowFlags")]
	public static extern void QWidget_OverrideWindowFlags(QWidget_Ptr* self, void* type);
	[LinkName("QWidget_WindowType")]
	public static extern Qt_WindowType QWidget_WindowType(QWidget_Ptr* self);
	[LinkName("QWidget_Find")]
	public static extern QWidget_Ptr* QWidget_Find(c_ulonglong param1);
	[LinkName("QWidget_ChildAt")]
	public static extern QWidget_Ptr* QWidget_ChildAt(QWidget_Ptr* self, c_int x, c_int y);
	[LinkName("QWidget_ChildAt2")]
	public static extern QWidget_Ptr* QWidget_ChildAt2(QWidget_Ptr* self, QPoint_Ptr* p);
	[LinkName("QWidget_SetAttribute")]
	public static extern void QWidget_SetAttribute(QWidget_Ptr* self, Qt_WidgetAttribute param1);
	[LinkName("QWidget_TestAttribute")]
	public static extern bool QWidget_TestAttribute(QWidget_Ptr* self, Qt_WidgetAttribute param1);
	[LinkName("QWidget_PaintEngine")]
	public static extern QPaintEngine_Ptr* QWidget_PaintEngine(QWidget_Ptr* self);
	[LinkName("QWidget_EnsurePolished")]
	public static extern void QWidget_EnsurePolished(QWidget_Ptr* self);
	[LinkName("QWidget_IsAncestorOf")]
	public static extern bool QWidget_IsAncestorOf(QWidget_Ptr* self, QWidget_Ptr* child);
	[LinkName("QWidget_AutoFillBackground")]
	public static extern bool QWidget_AutoFillBackground(QWidget_Ptr* self);
	[LinkName("QWidget_SetAutoFillBackground")]
	public static extern void QWidget_SetAutoFillBackground(QWidget_Ptr* self, bool enabled);
	[LinkName("QWidget_BackingStore")]
	public static extern QBackingStore_Ptr* QWidget_BackingStore(QWidget_Ptr* self);
	[LinkName("QWidget_WindowHandle")]
	public static extern QWindow_Ptr* QWidget_WindowHandle(QWidget_Ptr* self);
	[LinkName("QWidget_Screen")]
	public static extern QScreen_Ptr* QWidget_Screen(QWidget_Ptr* self);
	[LinkName("QWidget_SetScreen")]
	public static extern void QWidget_SetScreen(QWidget_Ptr* self, QScreen_Ptr* screen);
	[LinkName("QWidget_CreateWindowContainer")]
	public static extern QWidget_Ptr* QWidget_CreateWindowContainer(QWindow_Ptr* window);
	[LinkName("QWidget_WindowTitleChanged")]
	public static extern void QWidget_WindowTitleChanged(QWidget_Ptr* self, libqt_string* title);
	[LinkName("QWidget_WindowIconChanged")]
	public static extern void QWidget_WindowIconChanged(QWidget_Ptr* self, QIcon_Ptr* icon);
	[LinkName("QWidget_WindowIconTextChanged")]
	public static extern void QWidget_WindowIconTextChanged(QWidget_Ptr* self, libqt_string* iconText);
	[LinkName("QWidget_CustomContextMenuRequested")]
	public static extern void QWidget_CustomContextMenuRequested(QWidget_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QWidget_Event")]
	public static extern bool QWidget_Event(QWidget_Ptr* self, QEvent_Ptr* event);
	[LinkName("QWidget_MousePressEvent")]
	public static extern void QWidget_MousePressEvent(QWidget_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QWidget_MouseReleaseEvent")]
	public static extern void QWidget_MouseReleaseEvent(QWidget_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QWidget_MouseDoubleClickEvent")]
	public static extern void QWidget_MouseDoubleClickEvent(QWidget_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QWidget_MouseMoveEvent")]
	public static extern void QWidget_MouseMoveEvent(QWidget_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QWidget_WheelEvent")]
	public static extern void QWidget_WheelEvent(QWidget_Ptr* self, QWheelEvent_Ptr* event);
	[LinkName("QWidget_KeyPressEvent")]
	public static extern void QWidget_KeyPressEvent(QWidget_Ptr* self, QKeyEvent_Ptr* event);
	[LinkName("QWidget_KeyReleaseEvent")]
	public static extern void QWidget_KeyReleaseEvent(QWidget_Ptr* self, QKeyEvent_Ptr* event);
	[LinkName("QWidget_FocusInEvent")]
	public static extern void QWidget_FocusInEvent(QWidget_Ptr* self, QFocusEvent_Ptr* event);
	[LinkName("QWidget_FocusOutEvent")]
	public static extern void QWidget_FocusOutEvent(QWidget_Ptr* self, QFocusEvent_Ptr* event);
	[LinkName("QWidget_EnterEvent")]
	public static extern void QWidget_EnterEvent(QWidget_Ptr* self, QEnterEvent_Ptr* event);
	[LinkName("QWidget_LeaveEvent")]
	public static extern void QWidget_LeaveEvent(QWidget_Ptr* self, QEvent_Ptr* event);
	[LinkName("QWidget_PaintEvent")]
	public static extern void QWidget_PaintEvent(QWidget_Ptr* self, QPaintEvent_Ptr* event);
	[LinkName("QWidget_MoveEvent")]
	public static extern void QWidget_MoveEvent(QWidget_Ptr* self, QMoveEvent_Ptr* event);
	[LinkName("QWidget_ResizeEvent")]
	public static extern void QWidget_ResizeEvent(QWidget_Ptr* self, QResizeEvent_Ptr* event);
	[LinkName("QWidget_CloseEvent")]
	public static extern void QWidget_CloseEvent(QWidget_Ptr* self, QCloseEvent_Ptr* event);
	[LinkName("QWidget_ContextMenuEvent")]
	public static extern void QWidget_ContextMenuEvent(QWidget_Ptr* self, QContextMenuEvent_Ptr* event);
	[LinkName("QWidget_TabletEvent")]
	public static extern void QWidget_TabletEvent(QWidget_Ptr* self, QTabletEvent_Ptr* event);
	[LinkName("QWidget_ActionEvent")]
	public static extern void QWidget_ActionEvent(QWidget_Ptr* self, QActionEvent_Ptr* event);
	[LinkName("QWidget_DragEnterEvent")]
	public static extern void QWidget_DragEnterEvent(QWidget_Ptr* self, QDragEnterEvent_Ptr* event);
	[LinkName("QWidget_DragMoveEvent")]
	public static extern void QWidget_DragMoveEvent(QWidget_Ptr* self, QDragMoveEvent_Ptr* event);
	[LinkName("QWidget_DragLeaveEvent")]
	public static extern void QWidget_DragLeaveEvent(QWidget_Ptr* self, QDragLeaveEvent_Ptr* event);
	[LinkName("QWidget_DropEvent")]
	public static extern void QWidget_DropEvent(QWidget_Ptr* self, QDropEvent_Ptr* event);
	[LinkName("QWidget_ShowEvent")]
	public static extern void QWidget_ShowEvent(QWidget_Ptr* self, QShowEvent_Ptr* event);
	[LinkName("QWidget_HideEvent")]
	public static extern void QWidget_HideEvent(QWidget_Ptr* self, QHideEvent_Ptr* event);
	[LinkName("QWidget_NativeEvent")]
	public static extern bool QWidget_NativeEvent(QWidget_Ptr* self, void** eventType, void* message, void** result);
	[LinkName("QWidget_ChangeEvent")]
	public static extern void QWidget_ChangeEvent(QWidget_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QWidget_Metric")]
	public static extern c_int QWidget_Metric(QWidget_Ptr* self, QPaintDevice_PaintDeviceMetric param1);
	[LinkName("QWidget_InitPainter")]
	public static extern void QWidget_InitPainter(QWidget_Ptr* self, QPainter_Ptr* painter);
	[LinkName("QWidget_Redirected")]
	public static extern QPaintDevice_Ptr* QWidget_Redirected(QWidget_Ptr* self, QPoint_Ptr* offset);
	[LinkName("QWidget_SharedPainter")]
	public static extern QPainter_Ptr* QWidget_SharedPainter(QWidget_Ptr* self);
	[LinkName("QWidget_InputMethodEvent")]
	public static extern void QWidget_InputMethodEvent(QWidget_Ptr* self, QInputMethodEvent_Ptr* param1);
	[LinkName("QWidget_InputMethodQuery")]
	public static extern QVariant_Ptr QWidget_InputMethodQuery(QWidget_Ptr* self, Qt_InputMethodQuery param1);
	[LinkName("QWidget_InputMethodHints")]
	public static extern void* QWidget_InputMethodHints(QWidget_Ptr* self);
	[LinkName("QWidget_SetInputMethodHints")]
	public static extern void QWidget_SetInputMethodHints(QWidget_Ptr* self, void* hints);
	[LinkName("QWidget_UpdateMicroFocus")]
	public static extern void QWidget_UpdateMicroFocus(QWidget_Ptr* self);
	[LinkName("QWidget_Create")]
	public static extern void QWidget_Create(QWidget_Ptr* self);
	[LinkName("QWidget_Destroy")]
	public static extern void QWidget_Destroy(QWidget_Ptr* self);
